--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="./packages/css/styles.css">
 
-        <title>Prashanna</title>
+        <title>Coach Jimzon</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <nav class="nav container">
-                <a href="#" class="nav__logo">Prashanna Sathiyamoorthy</a>
+                <a href="#" class="nav__logo">Coach Jimzon</a>
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list grid">
                         <li class="nav__item">
@@ -34,7 +34,7 @@
                         </li>
                         <li class="nav__item">
                             <a href="#skills" class="nav__link">
-                                <i class="uil uil-file-alt nav__icon"></i>Skills
+                                <i class="uil uil-file-alt nav__icon"></i>Lessons
                             </a>
                         </li>
                           <li class="nav__item">
@@ -44,7 +44,7 @@
                         </li>
                         <li class="nav__item">
                             <a href="#portfolio" class="nav__link">
-                                <i class="uil uil-scenery nav__icon"></i>Portfolio                                
+                                <i class="uil uil-scenery nav__icon"></i>Testimony                                
                             </a>
                         </li>
                         <li class="nav__item">
@@ -86,26 +86,16 @@
                         </div>
 
                         <div class="home__img">
-                            <svg class="home__blob" viewBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                <mask id="mask0" mask-type="alpha">
-                                    <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 165.547 
-                                    130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 129.362C2.45775 
-                                    97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 -0.149132 97.9666 
-                                    0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
-                                </mask>
-                                <g mask="url(#mask0)">
-                                    <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 
-                                    165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
-                                    129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
-                                    -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
-                                    <image class="home__blob-img" x="" xlink:href="packages/images/pras-1.jpeg"/>
-                                </g>
+                            <svg class="home__blob" viewBox="0 0 200 187"  xmlns:xlink="http://www.w3.org/1999/xlink">
+                              
+                                    <image class="home__blob-img" x="" xlink:href="packages/images/jimzonchess.png"/>
+                              
                             </svg>
                         </div>
 
                         <div class="home__data">
-                            <h1 class="home__title">Hi, I'am Prashanna</h1>
-                            <h3 class="home__subtitle">Data Analyst</h3>
+                            <h1 class="home__title">Hi, I'm Coach Jimzon</h1>
+                            <h3 class="home__subtitle">Arena Grandmaster</h3>
                             <p class="home__description">High level experience in data analitical knowledge and digital banking with quality work.</p>
                             <a href="#contact" class="button button--flex home__button">
                                 Contact Me<i class="uil uil-message button__icon"></i>
