--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         </li>
                         <li class="nav__item">
                             <a href="#portfolio" class="nav__link">
-                                <i class="uil uil-scenery nav__icon"></i>Testimony                                
+                                <i class="uil uil-scenery nav__icon"></i>Testimonies                                
                             </a>
                         </li>
                         <li class="nav__item">
@@ -74,8 +74,8 @@
                 <div class="home__container container grid">
                     <div class="home__content grid">
                         <div class="home__social">
-                            <a href="https://www.linkedin.com/in/prashanna-sathiyamoorthy-194704153/" target="_blank" class="home__social-icon">
-                                <i class="uil uil-linkedin-alt"></i>
+                            <a href="https://lichess.org/@/Jimzon24" target="_blank" class="home__social-icon">
+                                <i class="uil uil-facebook-alt"></i>
                             </a>
                             <a href="https://twitter.com/prashanna01" target="_blank" class="home__social-icon">
                                 <i class="uil uil-twitter-alt"></i>
@@ -96,7 +96,7 @@
                         <div class="home__data">
                             <h1 class="home__title">Hi, I'm Coach Jimzon</h1>
                             <h3 class="home__subtitle">Arena Grandmaster</h3>
-                            <p class="home__description">High level experience in data analitical knowledge and digital banking with quality work.</p>
+                            <p class="home__description">Hey there! I'm Coach Jimzon, an Arena Grandmaster with a FIDE peak rating of 2172 and over 5 years of coaching experience, I offer dedicated guidance to chess players at all levels. Whether you're mastering fundamentals or refining strategic skills, I bring passion and expertise to enhance your chess journey.</p>
                             <a href="#contact" class="button button--flex home__button">
                                 Contact Me<i class="uil uil-message button__icon"></i>
                             </a>
@@ -116,33 +116,31 @@
             <!--==================== ABOUT ====================-->
             <section class="about section" id="about">
                 <h2 class="section__title">About Me</h2>
-                <span class="section__subtitle">My Introduction</span>
+                <!-- <span class="section__subtitle">My Introduction</span> -->
 
                 <div class="about__container container grid">
-                    <img src="packages/images/pras-2.jpeg" alt="" class="about__img">
+                    <img src="packages/images/jimzonpogi.png" alt="" class="about__img">
                     <div class="about__data">
                         <p class="about__description">
-                            Data analyst, with extensive knowledge and years of experience, 
-                            working in Digital banking technologies and other data analitical tools, 
-                            delivering quality work.
+                            As a seasoned Arena Grandmaster with a notable FIDE peak rating of 2172 and over 5 years of coaching expertise, I am dedicated to unleashing the full potential of chess players at all levels. Last year, I achieved 2nd place in a tournament in Thailand and defeated the country's top player. Additionally, I served as an assistant to the admin at one of the region's largest chess academies. Whether you're a beginner honing fundamentals or an advanced player refining strategies, I'm excited to be your committed guide on your chess journey
                         </p>
                         <div class="about__info">
                             <div>
-                                <span class="about__info-title">03+</span>
+                                <span class="about__info-title">05+</span>
                                 <span class="about__info-name">Years <br> experience</span>
                             </div>
                             <div>
-                                <span class="about__info-title">05+</span>
-                                <span class="about__info-name">Completed <br> certifications</span>
+                                <span class="about__info-title">2172</span>
+                                <span class="about__info-name">FIDE<br>peak rating</span>
                             </div>
                             <div>
-                                <span class="about__info-title">02+</span>
-                                <span class="about__info-name">companies<br>worked</span>
+                                <span class="about__info-title">2400+</span>
+                                <span class="about__info-name">Lichess and <br>Chess.com ratings</span>
                             </div>
                         </div>
 
                         <div class="about__buttons">
-                            <a download="" href="packages/pdf/" class="button button--flex">
+                            <a download="" href="packages//pdf/Chess CV.pdf" class="button button--flex">
                                 Download CV<i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
@@ -152,7 +150,7 @@
 
             <!--==================== SKILLS ====================-->
             <section class="skills section" id="skills">
-                <h2 class="section__title">Skills</h2>
+                <h2 class="section__title">Lessons</h2>
                 <span class="section__subtitle">My technical level</span>
 
                 <div class="skills__container container grid">
@@ -162,7 +160,7 @@
                             <div class="skills__header">
                                 <i class="uil uil-analytics skills__icon"></i>
                                <div>
-                                   <h1 class="skills__title">Data Analyst</h1>
+                                   <h1 class="skills__title">Individual Coaching Sessions</h1>
                                    <span class="skills__subtitle">More than 2 years</span>
                                </div>
 
@@ -212,7 +210,7 @@
                             <div class="skills__header">
                                 <i class="uil uil-money-bill skills__icon"></i>
                                <div>
-                                   <h1 class="skills__title">Banker</h1>
+                                   <h1 class="skills__title">Group Coaching Sessions</h1>
                                    <span class="skills__subtitle">More than 3 years</span>
                                </div>
 
@@ -265,7 +263,7 @@
                             <div class="skills__header">
                                <i class="uil uil-brackets-curly skills__icon"></i>
                                <div>
-                                   <h1 class="skills__title">Web Developer</h1>
+                                   <h1 class="skills__title">Game Analysis</h1>
                                    <span class="skills__subtitle">More than 3 years</span>
                                </div>
 
@@ -855,8 +853,8 @@
         <div class="footer__bg">
             <div class="footer__container container grid">
                 <div>
-                    <h1 class="footer__title">Prashanna Sathiyamoorthy</h1>
-                    <span class="footer__subtitle">Data Analyst</span>
+                    <h1 class="footer__title">Coach Jimzon</h1>
+                    <span class="footer__subtitle">Arena Grandmaster</span>
                 </div>
 
                 <ul class="footer__links">
@@ -883,7 +881,7 @@
                     </a>
                 </div>
             </div>
-            <p class="footer__copy">&#169; Ratheshan03. All rights reserved.</p>
+            <p class="footer__copy">&#169; Coach Jimzon. All rights reserved.</p>
         </div>
     </footer>
 
